# xylux-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
alux/vm/: build.zig  build.zig.zon
alux/vm/src/: main.zig  root.zig
crates/alux-compiler/: Cargo.toml
crates/alux-vm/: Cargo.toml
crates/xylux-audio/: Cargo.toml
crates/xylux-cli/: Cargo.toml
crates/xylux-cli/src/: main.rs
crates/xylux-core/: Cargo.toml
crates/xylux-ecs/: Cargo.toml
crates/xylux-ecs/benches/: ecs_1mill.rs  ecs_bench.rs
crates/xylux-ecs/src/: component.rs  entity.rs  lib.rs  query.rs  system.rs  world.rs
crates/xylux-ecs/src/component/: id.rs  mod.rs  storage.rs  transform.rs  velocity.rs
crates/xylux-input/: Cargo.toml
crates/xylux-render/: Cargo.toml
crates/xylux-render/examples/: render_test.rs
crates/xylux-render/shaders/: shader.frag  shader.vert  triangle.frag  triangle.vert
crates/xylux-render/src/: lib.rs  pipeline.rs  renderer.rs  window.rs
crates/xylux-render/src/renderer/: commands.rs  framebuffers.rs  mod.rs  render_pass.rs  renderer.rs  renderer_ald.rs
crates/xylux-render/src/vulkan/: command.rs  context.rs  device.rs  instance.rs  mod.rs  swapchain.rs  vulkan.rs
crates/xylux-tools/: Cargo.toml
crates/xylux-window/: Cargo.toml
crates/xylux-window/src/: lib.rs
docs/: book.toml
docs/src/: Design-v0.3.md  SUMMARY.md
examples/hello_triangle/: Cargo.toml
examples/hello_triangle/src/: main.rs
