[package]
name = "xylux-ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
glam   = { workspace = true }
bitvec = { workspace = true }
rayon  = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ecs_bench"
harness = false

[[bench]]
name = "ecs_1mill"
harness = false